# Python_Project

./: Eye_tracker_analysis.code-workspace  Python Project Eye-Tracker.pptx  README.md  pyproject.toml
data/Clean_data/: summary.csv  trial_summary.csv
data/Raw_Data/original data backup/: fixations_on_face.csv  sections.csv
data/Raw_Data/original data backup/2024-11-30_04-32-14-ae30e625/: blinks.csv
data/Raw_Data/original data backup/2024-12-16_09-57-31-00079675/: fixations.csv
data/Raw_Data/original data backup/2024-12-19_10-32-48-831783b3/: events.csv  info.json
data/Raw_Data/participants/1/: blinks.csv  events.csv  fixations_on_face.csv  saccades.csv
data/Raw_Data/participants/2/: blinks.csv  events.csv  fixations_on_face.csv  saccades.csv
data/Raw_Data/participants/2024-11-30_04-32-14-ae30e625/: events.csv  fixations.csv  info.json  saccades.csv
data/Raw_Data/participants/2024-12-16_09-57-31-00079675/: blinks.csv  events.csv  info.json  saccades.csv
data/Raw_Data/participants/2024-12-16_12-58-50-bd66a9f1/: blinks.csv  events.csv  fixations.csv  info.json  saccades.csv  scene_camera.json
data/Raw_Data/participants/2024-12-19_10-32-48-831783b3/: blinks.csv  fixations.csv  saccades.csv
data/Raw_Data/participants/2024-12-22_11-18-16-71a2ba67/: blinks.csv  events.csv  fixations.csv  info.json  saccades.csv
data/Raw_Data/participants/3/: blinks.csv  events.csv  fixations_on_face.csv  (+1 more)
src/: __init__.py  data_analysis.py  data_cleaner.py  data_visualizer.py  main.py
tests/: test_data_analysis.py  test_data_cleaner.py  test_data_visualizer.py
(+8 files in other folders)
